[gd_scene load_steps=17 format=3 uid="uid://cr81sfftinhnu"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_gnjic"]
[ext_resource type="PackedScene" uid="uid://bkmx1mvtb8dxr" path="res://Scenes/Enemy.tscn" id="2_3ugt8"]
[ext_resource type="PackedScene" uid="uid://dde3f2uantk5b" path="res://Scenes/Intro.tscn" id="2_nb6e8"]
[ext_resource type="PackedScene" uid="uid://18lymhdawjy7" path="res://Scenes/Fish.tscn" id="3_8jtwr"]
[ext_resource type="PackedScene" uid="uid://70bo017e2fwf" path="res://Scenes/Dinosaur.tscn" id="4_m8mii"]
[ext_resource type="PackedScene" uid="uid://ds5km1djhril" path="res://Scenes/Arena.tscn" id="5_542nn"]
[ext_resource type="PackedScene" uid="uid://naxhraby3ng2" path="res://Scenes/Item.tscn" id="6_kq75g"]
[ext_resource type="PackedScene" uid="uid://bcqacic7yj4ds" path="res://Scenes/HUD.tscn" id="7_hr2nx"]
[ext_resource type="PackedScene" uid="uid://dc60erflcrf6" path="res://Scenes/MainMenu.tscn" id="8_87611"]
[ext_resource type="Texture2D" uid="uid://dyxji31lsvmml" path="res://Images/UnderwaterFantasy/far.png" id="8_ya1ds"]
[ext_resource type="Texture2D" uid="uid://b11pog2gr6q20" path="res://Images/UnderwaterFantasy/foregound-merged.png" id="9_62wt3"]
[ext_resource type="PackedScene" uid="uid://dfksl6get6jnk" path="res://Scenes/PauseMenu.tscn" id="9_jh32b"]
[ext_resource type="PackedScene" uid="uid://cy3emhfwvf1gj" path="res://Scenes/Credits.tscn" id="10_esxjd"]
[ext_resource type="PackedScene" uid="uid://5yp4e43ckdrj" path="res://Scenes/Player.tscn" id="10_ympph"]
[ext_resource type="PackedScene" uid="uid://c61dmtdssq0mw" path="res://Scenes/Key.tscn" id="11_wlg1c"]
[ext_resource type="AudioStream" uid="uid://b65dtuu73n480" path="res://Sound/80s Synthpop Experiment - Steven O'Brien (Must Credit, CC-BY, www.steven-obrien.net).mp3" id="12_arleo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_gnjic")
intro_scene = ExtResource("2_nb6e8")
enemy_scene = ExtResource("2_3ugt8")
fish_scene = ExtResource("3_8jtwr")
dinosaur_scene = ExtResource("4_m8mii")
credits_scene = ExtResource("10_esxjd")
item_scene = ExtResource("6_kq75g")

[node name="UnderwaterFar" type="TextureRect" parent="."]
visible = false
offset_right = 2562.0
offset_bottom = 1433.0
texture = ExtResource("8_ya1ds")

[node name="UnderwaterNear" type="TextureRect" parent="."]
visible = false
z_index = 2
offset_right = 2557.0
offset_bottom = 1436.0
texture = ExtResource("9_62wt3")

[node name="Arena" parent="." instance=ExtResource("5_542nn")]

[node name="HUD" parent="." instance=ExtResource("7_hr2nx")]
offset_left = 38.0
offset_top = -14.0
offset_right = 38.0
offset_bottom = -14.0

[node name="MainMenu" parent="." instance=ExtResource("8_87611")]
offset_left = -1018.0
offset_top = 93.0
offset_right = -1018.0
offset_bottom = 93.0

[node name="PauseMenu" parent="." instance=ExtResource("9_jh32b")]
process_mode = 3
visible = false

[node name="Player" parent="." instance=ExtResource("10_ympph")]
position = Vector2(2650, 714)

[node name="Key" parent="." instance=ExtResource("11_wlg1c")]

[node name="WaveIntroTimer" type="Timer" parent="."]
wait_time = 2.2
one_shot = true

[node name="WaveEndTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ItemSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_arleo")

[connection signal="player_enable_fish_frenzy" from="." to="Player" method="_on_main_player_enable_fish_frenzy"]
[connection signal="player_hunt_key" from="." to="Player" method="_on_main_player_hunt_key"]
[connection signal="player_move_to_starting_position" from="." to="Player" method="_on_main_player_move_to_starting_position"]
[connection signal="cheats_pressed" from="MainMenu" to="." method="_on_main_menu_cheats_pressed"]
[connection signal="credits_pressed" from="MainMenu" to="." method="_on_main_menu_credits_pressed"]
[connection signal="exit_game_pressed" from="MainMenu" to="." method="_on_main_menu_exit_game_pressed"]
[connection signal="start_game_pressed" from="MainMenu" to="." method="_on_main_menu_start_game_pressed"]
[connection signal="abandon_game_pressed" from="PauseMenu" to="." method="_on_pause_menu_abandon_game_pressed"]
[connection signal="unpause_game_pressed" from="PauseMenu" to="." method="_on_pause_menu_unpause_game_pressed"]
[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="player_found_exit" from="Player" to="." method="_on_player_player_found_exit"]
[connection signal="player_found_exit_stop_key_movement" from="Player" to="Key" method="_on_player_player_found_exit_stop_key_movement"]
[connection signal="player_got_fish" from="Player" to="." method="_on_player_player_got_fish"]
[connection signal="player_got_key" from="Player" to="Key" method="_on_player_player_got_key"]
[connection signal="update_energy" from="Player" to="." method="_on_player_update_energy"]
[connection signal="update_fish" from="Player" to="." method="_on_player_update_fish"]
